src/core/config/transformer/snapshots/tailcall__core__config__transformer__subgraph__tests__extractor__extract_call.snap
---
source: src/core/config/transformer/subgraph.rs
expression: keys
---
Valid(
    Ok(
        Some(
            "arg { a b }",
        ),
    ),
)
