src/core/config/transformer/snapshots/tailcall__core__config__transformer__subgraph__tests__extractor__extract_http.snap
---
source: src/core/config/transformer/subgraph.rs
expression: keys
---
Valid(
    Ok(
        Some(
            "header { key value } id obj query_key query_value",
        ),
    ),
)
