src/core/config/transformer/snapshots/tailcall__core__config__transformer__subgraph__tests__extractor__non_value_template.snap
---
source: src/core/config/transformer/subgraph.rs
expression: keys
---
Valid(
    Err(
        ValidationError(
            [
                Cause {
                    message: "Type resolver can't use `.args`, use `.value` instead",
                    description: None,
                    trace: [
                        "http",
                        "path",
                    ],
                },
                Cause {
                    message: "Type resolver can't use `.args`, use `.value` instead",
                    description: None,
                    trace: [
                        "http",
                        "query",
                    ],
                },
            ],
        ),
    ),
)
